--- a/app/src/main/res/layout/fragment_example.xml
+++ b/app/src/main/res/layout/fragment_example.xml
@@ -13,4 +13,12 @@
         android:layout_height="wrap_content"/>
 
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/record1"
+        android:layout_centerInParent="true"
+        android:layout_alignParentStart="true"
+        android:layout_width="wrap_content"
+        android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentHorizontalZaif"
+        android:layout_height="wrap_content"/>
+
 </RelativeLayout>
