--- a/soundrecorder/src/main/res/drawable/button_record_color.xml
+++ b/soundrecorder/src/main/res/drawable/button_record_color.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dip"
-        android:color="@color/red_600" />
+        android:color="@color/white" />
 
     <corners android:radius="@dimen/_5sdp" />
 
