--- a/soundrecorder/src/main/res/layout/item_simple_song.xml
+++ b/soundrecorder/src/main/res/layout/item_simple_song.xml
@@ -6,7 +6,7 @@
     android:textColor="@color/black_de"
     android:layout_gravity="center_horizontal"
     android:padding="@dimen/_10sdp"
-    android:fontFamily="@font/ooredoo"
+    style="@style/CustomTextTitleLight"
     tools:text="Raisa Mencoba Mengerti"
     android:textSize="@dimen/_12ssp"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
