change recording and get song

--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
@@ -6,6 +6,8 @@
     android:orientation="horizontal"
     android:id="@+id/llBackground"
     android:paddingVertical="@dimen/_3sdp"
+    android:paddingStart="@dimen/_5sdp"
+    android:paddingEnd="@dimen/_8sdp"
     android:background="@drawable/gradient_yellow"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -13,12 +15,12 @@
 
     <ImageView
         android:layout_gravity="center"
-        android:layout_marginStart="@dimen/_5sdp"
         android:id="@+id/ivNote"
-        android:padding="@dimen/_7sdp"
+        android:layout_marginStart="@dimen/_3sdp"
+        android:paddingVertical="@dimen/_7sdp"
         android:clickable="true"
         android:focusable="true"
-        android:background="@drawable/button_black"
+        android:background="@drawable/button_black_color"
         app:srcCompat="@drawable/baseline_note_add_24"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_30sdp"
@@ -30,7 +32,7 @@
         android:layout_marginStart="@dimen/_3sdp"
         android:id="@+id/ivSong"
         android:padding="@dimen/_7sdp"
-        android:background="@drawable/button_black"
+        android:background="@drawable/button_black_color"
         app:srcCompat="@drawable/icon_music"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_30sdp"
@@ -109,7 +111,7 @@
         android:layout_marginStart="@dimen/_3sdp"
         android:id="@+id/ivListRecord"
         android:padding="@dimen/_7sdp"
-        android:background="@drawable/button_black"
+        android:background="@drawable/button_black_color"
         app:srcCompat="@drawable/saved_song"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_30sdp"
@@ -123,7 +125,7 @@
         android:id="@+id/ivVolume"
         android:padding="@dimen/_7sdp"
         android:layout_gravity="center"
-        android:background="@drawable/button_black"
+        android:background="@drawable/button_black_color"
         app:srcCompat="@drawable/baseline_volume_down_24"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_30sdp"
@@ -151,12 +153,11 @@
     <ImageView
         android:layout_gravity="center"
         android:layout_marginStart="@dimen/_3sdp"
-        android:background="@drawable/button_black"
+        android:background="@drawable/button_black_color"
         android:id="@+id/ivChangeColor"
         android:contentDescription="@string/app_name"
-        android:padding="@dimen/_7sdp"
+        android:paddingVertical="@dimen/_7sdp"
         android:src="@drawable/fill_color"
-        android:layout_marginEnd="@dimen/_5sdp"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_30sdp"
         android:clickable="true"
