--- a/soundrecorder/src/main/res/drawable/button_green_color.xml
+++ b/soundrecorder/src/main/res/drawable/button_green_color.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dip"
-        android:color="@color/green_900" />
+        android:color="@color/white" />
 
     <corners android:radius="@dimen/_5sdp" />
 
