--- a/soundrecorder/src/main/res/layout/tooltip_layout.xml
+++ b/soundrecorder/src/main/res/layout/tooltip_layout.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/tvTitle"
         android:text="Judul"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         style="@style/CustomTextTitleBold"
         android:layout_marginBottom="4dp"
         android:layout_width="wrap_content"
@@ -17,22 +17,41 @@
         android:layout_below="@+id/tvTitle"
         android:id="@+id/tvMessage"
         android:text="Isi pesan"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         style="@style/CustomTextTitleThin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/btnNext"
-        android:text="@string/next"
-        android:layout_below="@+id/tvMessage"
-        android:background="@drawable/circle_full_champ"
+    <LinearLayout
         android:layout_alignParentEnd="true"
-        style="@style/CustomTextTitleLight"
-        android:layout_marginTop="8dp"
-        android:layout_width="@dimen/_100sdp"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:paddingHorizontal="@dimen/_10sdp"
-        android:layout_height="@dimen/_30sdp" />
+        android:gravity="end"
+        android:layout_below="@+id/tvMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/btnSkip"
+            android:text="@string/skip"
+            style="@style/CustomTextTitleLight"
+            android:layout_marginTop="8dp"
+            android:layout_width="@dimen/_50sdp"
+            android:textColor="@color/black_de"
+            android:gravity="center"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:paddingHorizontal="@dimen/_3sdp"
+            android:layout_height="@dimen/_30sdp" />
+
+        <Button
+            android:id="@+id/btnNext"
+            android:text="@string/next"
+            android:background="@drawable/button_record_color"
+            style="@style/CustomTextTitleLight"
+            android:layout_width="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_marginTop="8dp"
+            android:paddingHorizontal="@dimen/_3sdp"
+            android:layout_height="@dimen/_30sdp" />
+    </LinearLayout>>
 </RelativeLayout>
