--- a/soundrecorder/src/main/res/values/colors.xml
+++ b/soundrecorder/src/main/res/values/colors.xml
@@ -39,6 +39,7 @@
     <color name="lite_blue">#42a5f5</color>
     <color name="window_background">#00000000</color>
     <color name="black_de">#000000</color>
+    <color name="tooltip_overlay_dark">#80000000</color>
 
 
 
