--- a/app/src/main/res/layout/fragment_example.xml
+++ b/app/src/main/res/layout/fragment_example.xml
@@ -7,6 +7,69 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:id="@+id/rr"
+        android:layout_marginTop="@dimen/_50sdp"
+        android:layout_marginHorizontal="@dimen/_5sdp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/tvSpeedMin"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_alignParentStart="true"
+            android:layout_marginEnd="3dp"
+            android:contentDescription="@string/app_name"
+            android:gravity="center"
+            android:padding="@dimen/_4sdp"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:background="@drawable/button_black_color_circle"
+            app:srcCompat="@drawable/minus"
+            tools:ignore="HardcodedText" />
+
+        <sound.recorder.widget.util.SpeedMarquee
+            android:id="@+id/tvRunningText"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_20sdp"
+            android:gravity="center|start"
+            android:paddingStart="@dimen/_20sdp"
+            android:layout_toEndOf="@+id/tvSpeedMin"
+            android:layout_toStartOf="@+id/tvSpeedPlus"
+            android:background="@color/black_de"
+            android:ellipsize="marquee"
+            android:fontFamily="@font/campton_thin"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:singleLine="true"
+            android:text="@string/text_choose_not"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_14ssp"
+            app:marquee_speed="100.0" />
+
+
+        <ImageView
+            android:id="@+id/tvSpeedPlus"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="3dp"
+            android:contentDescription="@string/app_name"
+            android:gravity="center"
+            android:padding="@dimen/_4sdp"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            android:background="@drawable/button_black_color_circle"
+            app:srcCompat="@drawable/plus"
+            tools:ignore="HardcodedText" />
+
+    </RelativeLayout>
+
     <FrameLayout
         android:id="@+id/bannerView"
         android:layout_centerInParent="true"
