--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@ Pembaruan UI: Kode ini sudah berada di thread UI, sehingga runOnUiThread tidak p
 
   <androidx.fragment.app.FragmentContainerView
         android:layout_below="@+id/tvRunningText"
-        android:id="@+id/recordingViewVerticalZaif"
+        android:id="@+id/record1"
         android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentVerticalZaif"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
