--- a/soundrecorder/src/main/res/layout/bottom_sheet_song.xml
+++ b/soundrecorder/src/main/res/layout/bottom_sheet_song.xml
@@ -11,6 +11,7 @@
 
     <!-- ListView -->
     <ListView
+        android:fitsSystemWindows="true"
         android:id="@+id/listView"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -23,6 +24,7 @@
 
     <ImageView
         android:id="@+id/btnCLose"
+        android:fitsSystemWindows="true"
         android:layout_width="@dimen/_40sdp"
         android:layout_height="@dimen/_40sdp"
         android:contentDescription="@string/app_name"
