--- a/soundrecorder/src/main/res/layout/bottom_sheet_song.xml
+++ b/soundrecorder/src/main/res/layout/bottom_sheet_song.xml
@@ -22,6 +22,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_4sdp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btnCLose"
+        app:layout_constraintBottom_toTopOf="@id/llMusic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ImageView
         android:id="@+id/btnCLose"
         android:layout_width="@dimen/_40sdp"
