--- a/soundrecorder/src/main/res/drawable/background_loading.xml
+++ b/soundrecorder/src/main/res/drawable/background_loading.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorPrimary"/>
-    <corners android:radius="16dp"/>
+    <solid android:color="@color/red_900"/>
+    <corners android:radius="@dimen/_12sdp"/>
 </shape>
