--- a/soundrecorder/src/main/res/layout/fragment_setting.xml
+++ b/soundrecorder/src/main/res/layout/fragment_setting.xml
@@ -103,6 +103,42 @@
                     android:layout_height="1dp"
                     android:background="@color/line" />
 
+
+                <LinearLayout
+                    android:id="@+id/ll_add_song"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <RelativeLayout
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/card_12dp">
+
+                        <androidx.appcompat.widget.AppCompatImageView
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_centerInParent="true"
+                            app:srcCompat="@drawable/outline_audio_file_24" />
+
+                    </RelativeLayout>
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="@string/how_to_add_new_song"
+                        android:fontFamily="@font/ooredoo"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/line" />
+
                 <LinearLayout
                     android:id="@+id/ll_help"
                     android:layout_width="match_parent"
