--- a/soundrecorder/src/main/res/drawable/circle_line_champ.xml
+++ b/soundrecorder/src/main/res/drawable/circle_line_champ.xml
@@ -3,12 +3,12 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/green_900" />
+        android:color="@color/colorPrimary" />
 
     <corners
         android:radius="@dimen/_180sdp" />
 
-    <solid android:color="@color/green_900"/>
+    <solid android:color="@color/colorPrimary"/>
 
     <padding
         android:bottom="0dip"
