--- a/soundrecorder/src/main/res/layout/activity_player.xml
+++ b/soundrecorder/src/main/res/layout/activity_player.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black_de"
     tools:context=".ui.activity.PlayerActivityWidget">
 
     <com.google.android.material.appbar.MaterialToolbar
@@ -13,15 +14,6 @@
         android:layout_height="?actionBarSize"
         app:layout_constraintTop_toTopOf="parent"
         app:title="" />
-
-   <!-- <sound.recorder.widget.tools.PlayerWaveformView
-        android:id="@+id/playerView"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        app:layout_constraintBottom_toTopOf="@+id/seekBar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />-->
 
     <com.google.android.material.chip.Chip
         android:id="@+id/chip"
